2/6 working on create event navbar

--- a/create_event.html
+++ b/create_event.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Create My Event</title>
+        <meta charset="utf-8">
 
+        <style>
+            .navbar li{float: right;}
+        </style>
+    </head>
+    <body>
+        <nav class="navbar">
+            <ul>
+                <li><a href="website.html">Calendar View</a></li>
+                <li><a href="create_event.html">Create My Event</a></li>
+            </ul>
+        </nav>
+    </body>
+</html>
