created bare bones nav bar

--- a/create_event.html
+++ b/create_event.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Create My Event</title>
-        <meta charset="utf-8">
+<html lang="en">
 
-        <style>
-            .navbar li{float: right;}
-        </style>
-    </head>
-    <body>
-        <nav class="navbar">
-            <ul>
-                <li><a href="website.html">Calendar View</a></li>
-                <li><a href="create_event.html">Create My Event</a></li>
-            </ul>
-        </nav>
-    </body>
+<head>
+  <title>Create My Event</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <div>
+    <header>
+      <a href="index.html"><img src="images/monkey.jpg" alt="logo"></a>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="calendar.html">Calendar View</a></li>
+        <li><a href="create_event.html">Create My Event</a></li>
+      </ul>
+    </nav>
+
+    <main>
+      <div>
+        <p>this is the create my event page</p>
+      </div>
+
+    </main>
+  </div>
+</body>
+
 </html>
