--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,12 @@
         Dates: https://stackoverflow.com/questions/32540044/display-current-date-in-dd-mm-yyyy-format
      -->
     <head>
+
+      <script type="text/javascript">
+        var date = new Date();
+        var activeDate = date.getDay();
+      </script>
+
         <style>
             * {box-sizing: border-box;}
             ul {list-style-type: none;}
