--- a/create_event.html
+++ b/create_event.html
@@ -2,21 +2,25 @@
 <html lang="en">
 
 <head>
+  <!--Link to Knewave font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Knewave&display=swap" rel="stylesheet">
+
   <title>Create My Event</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <div>
-    <header>
-      <a href="index.html"><img src="images/monkey.jpg" alt="logo"></a>
+  <div id="container">
+    <header style="display: inline-block;">
+      <a href="index.html"><img src="images/logo.png" alt="Munky Bizness logo"></a>
     </header>
 
     <nav>
       <ul>
-        <li><a href="calendar.html">Calendar View</a></li>
-        <li><a href="create_event.html">Create My Event</a></li>
+        <li style="float: right;"><a href="create_event.html">CREATE MY EVENT</a></li>
       </ul>
     </nav>
 
