--- a/index.html
+++ b/index.html
@@ -25,12 +25,56 @@
     </nav>
 
     <main>
-      <div>
-        <p>this is the home page</p>
+      <div class="wrapper">
+        <div class="container-calendar">
+          <div id="center">
+            <h1 class="calendarCenter">Event Calendar</h1>
+          </div>
+          <div id="right">
+            <div class="calendarCenter">
+              <label for="month">Jump To: </label>
+              <!-- Dropdowns to select a specific month and year -->
+              <select id="month" onchange="jump()">
+                <option value=0>Jan</option>
+                <option value=1>Feb</option>
+                <option value=2>Mar</option>
+                <option value=3>Apr</option>
+                <option value=4>May</option>
+                <option value=5>Jun</option>
+                <option value=6>Jul</option>
+                <option value=7>Aug</option>
+                <option value=8>Sep</option>
+                <option value=9>Oct</option>
+                <option value=10>Nov</option>
+                <option value=11>Dec</option>
+              </select>
+              <!-- Dropdown to select a specific year -->
+              <select id="year" onchange="jump()"></select>
+            </div>
+            <h3 class="calendarCenter" id="monthAndYear"></h3>
+            <div class="calendarCenter">
+              <button class="calendarCenter" id="previous" onclick="previous()">
+                ‹
+              </button>
+              <button class="calendarCenter" id="next" onclick="next()">
+                ›
+              </button>
+            </div>
+            <table class="table-calendar"
+              id="calendar"
+              data-lang="en">
+              <thead id="thead-month"></thead>
+              <!-- Table body for displaying the calendar -->
+              <tbody id="calendar-body"></tbody>
+            </table>
+          </div>
+        </div>
       </div>
 
     </main>
   </div>
 </body>
+
+<script src="calendarScript.js"></script>
 
 </html>
