update main style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
 
-    <main style="font-family: Ludica, Arial, sans-serif;>
+    <main>
       <div class="wrapper">
         <div class="container-calendar">
           <div id="center">
