--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
       </ul>
     </nav>
 
-    <main style="font-family: Ludica, Arial, sans-serif; text-align: center;">
+    <main style="text-align: center;">
         <div class="container">
             <h1 style="margin-bottom: 25%;">Login</h1>
             <label for="username"><b>Username</b></label>
