starting to add items for create event

--- a/create_event.html
+++ b/create_event.html
@@ -24,12 +24,18 @@
       </ul>
     </nav>
 
-    <main>
-      <div>
-        <p>this is the create my event page</p>
-      </div>
+    <main style="text-align: center;">
+      <div class="container">
+          <h1 style="margin-bottom: 25%;">Create My Event</h1>
+          <label for="event_name"><b>Event Name</b></label>
+          <input type="text" placeholder="Enter Event Name" name="event_name" required>
 
-    </main>
+          <label for="event_host"><b>Event Host</b></label>
+          <input type="text" placeholder="Enter Event Host" name="event_host" required>
+
+          <button type="submit">Submit</button>
+      </div>
+  </main>
   </div>
 </body>
 
