--- a/create_event.html
+++ b/create_event.html
@@ -24,14 +24,18 @@
       </ul>
     </nav>
 
-    <main style="text-align: center;">
+    <main style="text-align: center; padding-bottom: 35%;">
       <div class="container">
           <h1 style="margin-bottom: 25%;">Create My Event</h1>
-          <label for="event_name"><b>Event Name</b></label>
-          <input type="text" placeholder="Enter Event Name" name="event_name" required>
-
-          <label for="event_host"><b>Event Host</b></label>
-          <input type="text" placeholder="Enter Event Host" name="event_host" required>
+          <input type="text" placeholder="Event Address" name="event_address" required>
+          <input type="text" placeholder="City" name="event_city" required>
+          <input type="text" placeholder="Country" name="event_country" required>
+          <input type="text" placeholder="Maximum Capacity" name="event_max_cap" required>
+          <input type="text" placeholder="Name of Location" name="event_location" required>
+          <input type="text" placeholder="Open Time" name="event_open_time" required>
+          <input type="text" placeholder="Close Time" name="event_close_time" required>
+          <input type="text" placeholder="Room Number" name="event_room_num" required>
+          <input type="text" placeholder="State" name="event_state" required>
 
           <button type="submit">Submit</button>
       </div>
