--- a/create_event.html
+++ b/create_event.html
@@ -29,13 +29,16 @@
           <h1 style="margin-bottom: 25%;">Create My Event</h1>
           <input type="text" placeholder="Event Address" name="event_address" required>
           <input type="text" placeholder="City" name="event_city" required>
-          <input type="text" placeholder="Country" name="event_country" required>
-          <input type="text" placeholder="Maximum Capacity" name="event_max_cap" required>
-          <input type="text" placeholder="Name of Location" name="event_location" required>
-          <input type="text" placeholder="Open Time" name="event_open_time" required>
-          <input type="text" placeholder="Close Time" name="event_close_time" required>
-          <input type="text" placeholder="Room Number" name="event_room_num" required>
           <input type="text" placeholder="State" name="event_state" required>
+          <input type="text" placeholder="Country" name="event_country" required>
+          <input type="text" placeholder="Name of Location" name="event_location" required>
+          <input type="text" placeholder="Room" name="event_room_num" required>
+          <input type="text" placeholder="Maximum Capacity" name="event_max_cap" required>
+          <input type="text" placeholder="Start" name="event_open_time" required>
+          <input type="text" placeholder="End" name="event_close_time" required>
+
+          
+          
 
           <button type="submit">Submit</button>
       </div>
