--- a/create_event.html
+++ b/create_event.html
@@ -34,8 +34,8 @@
           <input type="text" placeholder="Name of Location" name="event_location" required>
           <input type="text" placeholder="Room" name="event_room_num" required>
           <input type="text" placeholder="Maximum Capacity" name="event_max_cap" required>
-          <input type="text" placeholder="Start" name="event_open_time" required>
-          <input type="text" placeholder="End" name="event_close_time" required>
+          <input type="text" placeholder="Start Time" name="event_open_time" required>
+          <input type="text" placeholder="End Time" name="event_close_time" required>
 
           
           
