--- a/create_account.html
+++ b/create_account.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Knewave&display=swap" rel="stylesheet">
   
-  <title>Login</title>
+  <title>Create My Account</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -28,11 +28,10 @@
         <div class="container">
             <h1 style="margin-bottom: 25%;">Create Account</h1>
             <label for="username"><b>Username</b></label>
-            <input type="text" id="username" placeholder="Enter Username" name="username" required autofocus>
+            <input type="text" id="username" placeholder="Enter Email Address" name="username" required autofocus>
 
             <label for="password"><b>Password</b></label>
             <input type="password" id="password" placeholder="Enter Password" name="password" required autofocus>
-            <label for="repassword"><b>Re-Type Password</b></label>
             <input type="password" id="repassword" placeholder="Re-Type Password" name="repassword" required autofocus>
 
             <button type="button" id="createAccount">Create Account</button>
