--- a/index.html
+++ b/index.html
@@ -73,8 +73,29 @@
 
     </main>
   </div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js";
+
+    // Firebase configuration
+    const firebaseConfig = {
+        apiKey: "AIzaSyCFcAzIbkyu33GuRAS_oYtc6IUlmxqFEdM",
+        authDomain: "evnt-320a0.firebaseapp.com",
+        projectId: "evnt-320a0",
+        storageBucket: "evnt-320a0.firebasestorage.app",
+        messagingSenderId: "146980889296",
+        appId: "1:146980889296:web:85312e3d4a0c3f396d74d5"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+
+    // Get Firestore instance
+    const db = getFirestore(app);
+  </script>
+
 </body>
 
-<script src="calendarScript.js"></script>
+<script type="module" src="calendarScript.js"></script>
 
 </html>
