--- a/create_event.html
+++ b/create_event.html
@@ -24,9 +24,9 @@
       </ul>
     </nav>
 
-    <main style="text-align: center; padding-bottom: 35%;">
-      <div class="container">
-          <h1 style="margin-bottom: 25%;">Create My Event</h1>
+    <main>
+      <div class="event-container center">
+          <h1>Create My Event</h1>
           <input type="text" placeholder="Event Address" name="event_address" required>
           <input type="text" placeholder="City" name="event_city" required>
           <input type="text" placeholder="State" name="event_state" required>
@@ -36,10 +36,6 @@
           <input type="text" placeholder="Maximum Capacity" name="event_max_cap" required>
           <input type="text" placeholder="Start Time" name="event_open_time" required>
           <input type="text" placeholder="End Time" name="event_close_time" required>
-
-          
-          
-
           <button type="submit">Submit</button>
       </div>
   </main>
