--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
               <button class="calendarCenter" id="previous" onclick="previous()">
                 ‹
               </button>
-              <button class="calendarCenter" id="next" onclick="next()">
-                ›
-              </button>
+              <button class="calendarCenter" id="next" onclick="next()">›</button>
             </div>
             <table class="table-calendar"
               id="calendar"
