--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
             <input type="password" id="password" placeholder="Enter Password" name="password" required autofocus>
 
             <button type="button" id="loginButton">Login</button>
+            <p>Don't have an account? <span><a href="create_account.html">Create Account</a></span></p>
         </div>
     </main>
   </div>
