CreateAccount minor fix + Create Event Data Submission.
+ CreateAccount Page clears on submission
+ CreateAccount uses the form tag

+ CreateEvent States now has all states in a dropdown menu
+ Create Event Menu now has ID's
+ Room# and Maximum Capacity changed to Number type
+ Start and End Time now use the Time type
+ Data now enters in the Firebase Realtime Database.
+ Clears on Entry

--- a/create_account.html
+++ b/create_account.html
@@ -27,6 +27,7 @@
     <main style="text-align: center;padding-bottom: 13%;" >
         <div class="container">
             <h1 style="margin-bottom: 25%;">Create Account</h1>
+            <form id="createUser">
             <label for="username"><b>Username</b></label>
             <input type="text" id="username" placeholder="Enter Email Address" name="username" required autofocus>
 
@@ -35,6 +36,7 @@
             <input type="password" id="repassword" placeholder="Re-Type Password" name="repassword" required autofocus>
 
             <button type="button" id="createAccount">Create Account</button>
+            </form>
         </div>
     </main>
   </div>
@@ -53,7 +55,6 @@
       storageBucket: "evnt-320a0.firebasestorage.app",
       messagingSenderId: "146980889296",
       appId: "1:146980889296:web:85312e3d4a0c3f396d74d5"
-  // ... your config ...
 };
 
     // Initialize Firebase
@@ -93,6 +94,7 @@
 
     const createAccountButton = document.getElementById("createAccount");
     createAccountButton.addEventListener("click", handleCreateAccount);
+    document.getElementById("createUser").reset();
   </script>
 </body>
 
