--- a/create_event.html
+++ b/create_event.html
@@ -20,6 +20,7 @@
 
     <nav>
       <ul>
+        <li style="float:right;"> <a href="login.html">Sign In</a></li>
         <li style="float: right;"><a href="create_event.html">CREATE MY EVENT</a></li>
       </ul>
     </nav>
