--- a/create_event.html
+++ b/create_event.html
@@ -20,7 +20,7 @@
 
     <nav>
       <ul>
-        <li style="float:right;"> <a href="login.html">Sign In</a></li>
+        <li style="float:right;"> <a href="login.html">SIGN IN</a></li>
         <li style="float: right;"><a href="create_event.html">CREATE MY EVENT</a></li>
       </ul>
     </nav>
@@ -85,7 +85,7 @@
             <option value="WY">Wyoming</option>
           </select>
           <input type="text" id="Name" placeholder="Name of Location" name="event_location" required>
-          <input type="number" id="Room#" placeholder="Room" name="event_room_num" required>
+          <input type="number" id="Room#" placeholder="Room Number" name="event_room_num" required>
           <input type="number" step="1" id="Max" placeholder="Maximum Capacity" name="event_max_cap" required>
           <input type="time" id="STime" placeholder="Start Time" name="event_open_time" required>
           <input type="time" id="ETime" placeholder="End Time" name="event_close_time" required>
