fixed create account

--- a/create_event.html
+++ b/create_event.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
- 
 <head>
   <!--Link to Knewave font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +17,6 @@
 
     <nav>
       <ul>
-        <li style="float:right;"> <a href="login.html">SIGN IN</a></li>
         <li style="float: right;"><a href="create_event.html">CREATE MY EVENT</a></li>
       </ul>
     </nav>
@@ -85,70 +81,15 @@
             <option value="WY">Wyoming</option>
           </select>
           <input type="text" id="Name" placeholder="Name of Location" name="event_location" required>
-          <input type="number" id="Room#" placeholder="Room Number" name="event_room_num" required>
+          <input type="number" id="Room#" placeholder="Room" name="event_room_num" required>
           <input type="number" step="1" id="Max" placeholder="Maximum Capacity" name="event_max_cap" required>
           <input type="time" id="STime" placeholder="Start Time" name="event_open_time" required>
           <input type="time" id="ETime" placeholder="End Time" name="event_close_time" required>
           <button type="submit">Submit</button>
           </form>
       </div>
-    </main>
+  </main>
   </div>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js";
-
-    // Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCFcAzIbkyu33GuRAS_oYtc6IUlmxqFEdM",
-      authDomain: "evnt-320a0.firebaseapp.com",
-      projectId: "evnt-320a0",
-      storageBucket: "evnt-320a0.firebasestorage.app",
-      messagingSenderId: "146980889296",
-      appId: "1:146980889296:web:85312e3d4a0c3f396d74d5"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    async function createEvent(userInput) {
-  try {
-    const LocCollectionRef = collection(db, 'Location');
-    const docRef = await addDoc(LocCollectionRef, userInput);
-    console.log('Location written with ID:', docRef.id);
-    alert('Event Created Successfully!');
-  } catch (e) {
-    console.error('Firestore Error:', e.message);
-    alert(`Error: ${e.message}`);
-  }
-}
-    
-
-    // Get form and attach event listener
-    const form = document.getElementById('createEventForm');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const userData = {
-        Address: document.getElementById('event_address').value,
-        City: document.getElementById('event_city').value,
-        State: document.getElementById('event_state').value,
-        Country: document.getElementById('event_country').value,
-        Location: document.getElementById('event_location').value,
-        Room: document.getElementById('event_room_num').value,
-        MaximumCapacity: document.getElementById('event_max_cap').value,
-        Start: document.getElementById('event_open_time').value,
-        End: document.getElementById('event_close_time').value,
-      };
-
-      await createEvent(userData);
-      form.reset(); // Clear form after submission
-    });
-  </script>
-
 </body>
 <script type="module">
   import { getDatabase, push, ref } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";;
