--- a/create_event.html
+++ b/create_event.html
@@ -27,7 +27,7 @@
           <form id="dataEntry">
           <input type="text" id="Address" placeholder="Event Address" name="event_address" required>
           <input type="text" id="City" placeholder="City" name="event_city" required>
-          <select>
+          <select id="State">
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
             <option value="AZ">Arizona</option>
@@ -124,7 +124,6 @@
       address: address,
       city: city,
       state: state,
-      country: country,
       name: name,
       room: room,
       max: max,
