--- a/create_event.html
+++ b/create_event.html
@@ -17,7 +17,7 @@
 
     <nav>
       <ul>
-        <li style="float: right;"><a href="create_event.html">CREATE MY EVENT</a></li>
+        <li style="float:right;"> <a href="login.html">SIGN IN</a></li>
       </ul>
     </nav>
 
