--- a/create_event.html
+++ b/create_event.html
@@ -28,6 +28,7 @@
           <input type="text" id="Address" placeholder="Event Address" name="event_address" required>
           <input type="text" id="City" placeholder="City" name="event_city" required>
           <select id="State">
+            <option value="State">State</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
             <option value="AZ">Arizona</option>
